[tool.poetry]
name = "fasttrackpy"
version = "0.1.0"
description = "A python implementation of FastTrack"
authors = ["JoFrhwld <JoFrhwld@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "fasttrackpy", from="src"}]
exclude = [
    "notebooks/",
    "examples/",
    "docs/"
]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
praat-parselmouth = "^0.4.3"
scipy = {version = "^1.11.3", python = ">=3.10,<3.13"}
numpy = {version = "^1.26.1", python = ">=3.10,<3.13"}
scikit-learn = "^1.3.2"
polars = "^0.19.13"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.4.3"
plotly = "^5.18.0"
pandas = "^2.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"