[tool.poetry]
name = "fasttrackpy"
version = "0.4.2"
description = "A python implementation of FastTrack"
authors = [
    "JoFrhwld <JoFrhwld@gmail.com>",
    "santiagobarreda <sbarreda@ucdavis.edu>"
]
license = "MIT"
readme = "README.md"
packages = [{include = "fasttrackpy", from="src"}]
exclude = [
    "notebooks/",
    "examples/",
    "docs/"
]
homepage = "https://fasttrackiverse.github.io/fasttrackpy/"
repository = "https://github.com/FastTrackiverse/fasttrackpy"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
praat-parselmouth = "^0.4.3"
scipy = {version = "^1.11.3", python = ">=3.10,<3.12"}
numpy = {version = "^1.26.1", python = ">=3.10,<3.12"}
polars = "^0.20.18"
pytest-cov = "^4.1.0"
pytest = "^7.4.3"
python-magic = {version = "^0.4.27", markers = "sys_platform != 'win32'"}
python-magic-bin = {version = "^0.4.14", markers = "sys_platform == 'win32'"}
click = "^8.1.7"
cloup = "^3.0.3"
matplotlib = "^3.8.2"
aligned-textgrid = "^0.6.2"
tqdm = "^4.66.1"
joblib = "^1.3.2"
pyyaml = "^6.0.1"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pytest = "^7.4.3"
plotly = "^5.18.0"
pandas = "^2.1.2"
ipython = "^8.17.2"
kaleido = "0.2.1"
pillow = "^10.2.0"


[tool.poetry.group.docs.dependencies]
quartodoc = "^0.6.5"
nbformat = "^5.9.2"
jupyter = "^1.0.0"
ipython = "^8.18.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
    "--cov-config=tests/.coveragerc",
    "--cov-report=xml",
    "--cov",
    "--log-cli-level=INFO"
]
filterwarnings =[
    "ignore::UserWarning"
]
pythonpath = "src"
testpaths = "tests"

[tool.poetry.scripts]
fasttrack = 'fasttrackpy.cli:fasttrack'